[package]
name = "special-git-commit"
version = "0.1.2"
edition = "2021"
authors = ["Tdxdxoz <tdxdxoz@gmail.com>"]
license = "WTFPL"
readme = "README.md"
keywords = ["git", "hash"]
categories = ["command-line-utilities", "development-tools"]
repository = "https://github.com/OmmyZhang/special-git-commit-hash"
description = """
A command line tool for generating commit hashes with specified prefixes.
"""

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sha1 = "0.10.6"
git2 = { version = "0.18.3", default-features = false }
num_cpus = "1.0"
